# GenZ-LLM-Analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup_ci.sh  test.py
.devcontainer/: devcontainer.json
GenZ/: __init__.py  analye_model.py  analyse_model.py  collective_times.py  get_language_model.py  operator_base.py  operators.py  parallelism.py  power.py  system.py  unit.py
Paper charts/: Sec 5.A Workload Optimization Impacts.ipynb  Sec 5.B Parallelism Strategies.ipynb  Sec 6.A TFLOPS scaling.ipynb  Sec 6.B MeMBW scaling.ipynb  Sec 6.C NoCBW scaling.ipynb  Sec 6.D NoC Link latency scaling.ipynb  Sec 6.E Parameter Offload.ipynb  Sec 7.  Platform Requirements.ipynb  Sec 8. Future Model Requirements.ipynb  variables.py
Systems/: bud_hardwares.py  system_configs.py
Website/: Home.py  requirements.txt
notebook/: Chunked_prefill.ipynb  Dense_LLM_operator_breakdown.ipynb  GenZ_on_colab.ipynb  LLM_inference_perf.ipynb  LLM_memory_analysis.ipynb  LLM_operator_breakdown.ipynb  dbrx_moe_model_test.ipynb  deepseek_moe_model_test.ipynb  einsum_operators.ipynb  gpt4_moe_model_test.ipynb  grok1_moe_model_test.ipynb  mamba_model.ipynb  mixtral_moe_model_test.ipynb  moe_load_imbalance_testing.ipynb  operators.ipynb  utils.py
src/: BudSimHardwares.py  __init__.py  analye_model.py  collective_times.py  operator_base.py  operators.py  system.py
tests/: test_bud_hardwares.py  test_budsim_hardware.py  test_decode_time.py  test_divide_npu_counts.py  test_lora.py  test_model_df_analysis.py  test_model_generations.py  test_prefill_time.py
(+68 files in other folders)
