[build-system]
requires = [
    "setuptools >= 49.4.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "genz_llm"
version = "0.0.13.1"
authors = [
    { name="Abhimanyu Bambhaniya", email="abambhaniya3@gatech.edu" },
]
description = "GenZ is designed to simplify the relationship between the hardware platform used for serving Large Language Models(LLMs) and inference serving metrics like latency and memory."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.8.0",
    "kaleido>=0.2.1",
    "nbformat>=5.9.2",
    "numpy>=1.26.3",
    "pandas>=2.2.1",
    "paretoset>=1.2.3",
    "pillow>=10.2.0",
    "plotly>=5.9.0",
    "tqdm>=4.66.2",
    "ipywidgets",
    "seaborn",
    "plotnine",
    "Jinja2",
]

[project.urls]
Homepage = "https://github.com/abhibambhaniya/GenZ-LLM-Analyzer"
Issues = "https://github.com/abhibambhaniya/GenZ-LLM-Analyzer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["GenZ*", "Systems*"]
exclude = ["*.__pycache__", "*.pyc"]
